# textMining

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Makefile  README.md  bTime.sh  bench.sh  configure  testBase  testTime  wTest.txt
bloomfilter/: bloomfilter.hpp
data/: wTest.txt
doc/: Doxyfile  Doxyfile.in
patricia_trie/: PatriciaTrie.cpp
ref/: TextMiningApp  TextMiningCompiler
src/: Makefile  main.cpp
src/bloomfilter/: bloomfilter.cpp
src/compilator/: compilator.cpp  main.cpp
src/headers/: bloomfilter.hpp  includes.hpp  interpreter.hpp  patriciatrie.hpp
src/interpreter/: interpreter.cpp  interpreter.hpp  main.cpp
src/patriciaTrie/: main.cpp  patriciaTrie.cpp  patriciaTrie.hpp
test/: Makefile  bTime.sh  bench.sh  bench.sh~  maintest.cpp  testBase
